--- a/app/views/disciplinas/_admin_index.html.erb
+++ b/app/views/disciplinas/_admin_index.html.erb
@@ -1,32 +1,48 @@
-
-<table>
+<%- model_class = Disciplina -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Código &nbsp;&nbsp;</th>
-      <th>Curso &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Funcionário &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Função &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:codigo) %></th>
+      <th><%= model_class.human_attribute_name(:curso_id) %></th>
+      <th><%= model_class.human_attribute_name(:funcao_id) %></th>
+      <th><%= model_class.human_attribute_name(:funcionario_id) %></th>
+      <th><%= model_class.human_attribute_name(:aluno_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @disciplinas.each do |disciplina| %>
       <tr>
+        <td><%= link_to disciplina.id, disciplina_path(disciplina) %></td>
         <td><%= disciplina.nome %></td>
         <td><%= disciplina.codigo %></td>
         <td><%= disciplina.curso.nome %></td>
-        <td><%= disciplina.funcionario.nome %></td>
         <td><%= disciplina.funcao.cargo %></td>
-        <td><%= link_to 'Mostrar |', disciplina %></td>
-        <td><%= link_to 'Editar |', edit_disciplina_path(disciplina) %></td>
-        <td><%= link_to 'Apagar', disciplina, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
+        <td><%= disciplina.funcionario.nome %></td>
+        <td><%= disciplina.aluno_id %></td>
+        <td><%=l disciplina.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_disciplina_path(disciplina), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      disciplina_path(disciplina),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+          <%= link_to 'Mostrar', disciplina, :class => 'btn btn-default btn-xs'%>
+        </td>
       </tr>
     <% end %>
+    <%= paginate @disciplinas %>
   </tbody>
 </table>
 
-<br>
-
-
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_disciplina_path,
+            :class => 'btn btn-primary' %>
