--- a/app/views/funcionarios/_form.html.erb
+++ b/app/views/funcionarios/_form.html.erb
@@ -1,61 +1,104 @@
-<%= form_for(@funcionario) do |f| %>
-  <% if @funcionario.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@funcionario.errors.count, "error") %> prohibited this funcionario from being saved:</h2>
+<%= form_for @funcionario, :html => { :class => "form-horizontal funcionario" } do |f| %>
 
-      <ul>
-      <% @funcionario.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @funcionario.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@funcionario.errors.count, "error") %> prohibited this funcionario from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @funcionario.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :Nome %><br>
-    <%= f.text_field :nome %>
+  <div class="form-group">
+    <%= f.label :nome, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :nome, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:nome) %>
   </div>
-  <div class="field">
-    <%= f.label :Matricula %><br>
-    <%= f.text_field :matricula %>
+  <div class="form-group">
+    <%= f.label :matricula, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :matricula, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:matricula) %>
   </div>
-  <div class="field">
-    <%= f.label :nascimento, "Nascimento" %><br>
-    <%= f.date_select :nascimento, :start_year => 1950, :order => [:day, :month, :year] %>
+  <div class="form-group">
+    <%= f.label :nascimento, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :nascimento, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:nascimento) %>
   </div>
-  <div class="field">
-    <%= f.label :Endereço %><br>
-    <%= f.text_field :endereco %>
+  <div class="form-group">
+    <%= f.label :endereco, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :endereco, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:endereco) %>
   </div>
-  <div class="field">
-    <%= f.label :Admissão %><br>
-    <%= f.date_select :admissao, :order => [:day, :month, :year] %>
+  <div class="form-group">
+    <%= f.label :admissao, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :admissao, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:admissao) %>
   </div>
-  <div class="field">
-    <%= f.label :Usuário %><br>
-    <%= f.collection_select :user_id, User.all, :id, :email %>
+  <div class="form-group">
+    <%= f.label :status, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :status, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:status) %>
   </div>
-  <div class="field">
-    <%= f.label :Função %><br>
-    <%= f.collection_select :funcao_id, Funcao.all, :id, :cargo %>
- </div>
- <div class="field">
-    <%= f.label :Sexo %><br>
-    <%= f.select(:sexo, ["Feminino", "Masculino"], prompt: "Selecione") %>
+  <div class="form-group">
+    <%= f.label :user_id, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :user_id, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:user_id) %>
   </div>
-  <div class="field">
-    <%= f.label :CPF %><br>
-    <%= f.text_field :cpf %>
+  <div class="form-group">
+    <%= f.label :funcao_id, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :funcao_id, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:funcao_id) %>
   </div>
-  <div class="field">
-    <%= f.label :RG %><br>
-    <%= f.text_field :rg %>
+  <div class="form-group">
+    <%= f.label :sexo, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :sexo, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:sexo) %>
   </div>
-  <div class="field">
-    <%= f.label :Status %><br>
-    <%= f.select(:status, ["Ativo", "Inativo"]) %>
+  <div class="form-group">
+    <%= f.label :cpf, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :cpf, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:cpf) %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.label :rg, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :rg, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:rg) %>
   </div>
+
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                funcionarios_path, :class => 'btn btn-default' %>
+    </div>
+  </div>
+
 <% end %>
