--- a/app/views/alunos/_admin_index.html.erb
+++ b/app/views/alunos/_admin_index.html.erb
@@ -1,42 +1,57 @@
 
-<table>
+<%- model_class = Aluno -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Matricula &nbsp;&nbsp;</th>
-      <th>Sexo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Data Nascimento &nbsp;</th>
-      <th>Endereço &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Cpf &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Rg &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>User &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Disciplinas &nbsp;&nbsp;&nbsp;</th>
-      <th>Status &nbsp;&nbsp;</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:matricula) %></th>
+      <th><%= model_class.human_attribute_name(:data_nascimento) %></th>
+      <th><%= model_class.human_attribute_name(:endereco) %></th>
+      <th><%= model_class.human_attribute_name(:cpf) %></th>
+      <th><%= model_class.human_attribute_name(:rg) %></th>
+      <th><%= model_class.human_attribute_name(:status) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%= model_class.human_attribute_name(:curso_id) %></th>
+      <th><%= model_class.human_attribute_name(:turma_id) %></th>
+      <th><%= model_class.human_attribute_name(:sexo) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @alunos.each do |aluno| %>
       <tr>
+        <td><%= link_to aluno.id, aluno_path(aluno) %></td>
         <td><%= aluno.nome %></td>
         <td><%= aluno.matricula %></td>
-        <td><%= aluno.sexo %></td>
         <td><%= aluno.data_nascimento %></td>
         <td><%= aluno.endereco %></td>
         <td><%= aluno.cpf %></td>
         <td><%= aluno.rg %></td>
-        <td><%= aluno.user.email %></td>
         <td><%= aluno.status %></td>
-        <td><%= aluno.disciplinas_nome %></td>
-        <td><%= link_to 'Mostrar |', aluno %></td>
-        <td><%= link_to 'Editar |', edit_aluno_path(aluno) %></td>
-        <td><%= link_to 'Apagar', aluno, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
+        <td><%= aluno.user.email %></td>
+        <td><%= aluno.curso.nome %></td>
+        <td><%= aluno.turma.codigo %></td>
+        <td><%= aluno.sexo %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_aluno_path(aluno), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      aluno_path(aluno),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+          <%= link_to 'Mostrar', aluno, :class => 'btn btn-default btn-xs'%>
+        </td>
       </tr>
     <% end %>
+  <%= paginate @alunos %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'Novo Aluno', new_aluno_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_aluno_path,
+            :class => 'btn btn-primary' %>
