--- a/app/views/alunos/show.html.erb
+++ b/app/views/alunos/show.html.erb
@@ -1,64 +1,41 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Aluno -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @aluno.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @aluno.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:matricula) %>:</strong></dt>
+  <dd><%= @aluno.matricula %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:data_nascimento) %>:</strong></dt>
+  <dd><%= @aluno.data_nascimento %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:endereco) %>:</strong></dt>
+  <dd><%= @aluno.endereco %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:cpf) %>:</strong></dt>
+  <dd><%= @aluno.cpf %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:rg) %>:</strong></dt>
+  <dd><%= @aluno.rg %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
+  <dd><%= @aluno.status %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= @aluno.user_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:curso_id) %>:</strong></dt>
+  <dd><%= @aluno.curso_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:disciplina_id) %>:</strong></dt>
+  <dd><%= @aluno.disciplina_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:turma_id) %>:</strong></dt>
+  <dd><%= @aluno.turma_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:sexo) %>:</strong></dt>
+  <dd><%= @aluno.sexo %></dd>
+</dl>
 
-<p>
-  <strong>Matricula:</strong>
-  <%= @aluno.matricula %>
-</p>
-
-<p>
-  <strong>Sexo:</strong>
-  <%= @aluno.sexo %>
-</p>
-
-<p>
-  <strong>Data nascimento:</strong>
-  <%= @aluno.data_nascimento %>
-</p>
-
-<p>
-  <strong>Endereco:</strong>
-  <%= @aluno.endereco %>
-</p>
-
-<p>
-  <strong>Cpf:</strong>
-  <%= @aluno.cpf %>
-</p>
-
-<p>
-  <strong>Rg:</strong>
-  <%= @aluno.rg %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @aluno.user.email %>
-</p>
-
-<p>
-  <strong>Curso:</strong>
-  <%= @aluno.curso.nome %>
-</p>
-
-<p>
-  <strong>Turma:</strong>
-  <%= @aluno.turma_id %>
-</p>
-<p>
-  <strong>Status:</strong>
-  <%= @aluno.status %>
-</p>
-<p>
-<strong>Disciplinas:</strong>
-  <% @aluno.disciplinas.each do |disciplina| %>
-  <li><%= "Código: #{disciplina.codigo} - Nome: #{disciplina.nome}" %></li>
-<% end %>
-</p>
-
-<%= link_to 'Editar', edit_aluno_path(@aluno) %> |
-<%= link_to 'Voltar', alunos_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              alunos_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_aluno_path(@aluno), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              aluno_path(@aluno),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
