--- a/app/views/controle_usuarios/index.html.erb
+++ b/app/views/controle_usuarios/index.html.erb
@@ -1,9 +1,5 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Usuarios</h1>
-<p>Controle de Usuários</p>
-
-<h1>:: Usuarios ::</h1>
+<h1>.::Usuários::.</h1>
 
 <table>
   <thead>
@@ -22,6 +18,7 @@
         
       </tr>
     <% end %>
+   <%= paginate @users %>
   </tbody>
 </table>
 
