--- a/app/views/cursos/_admin_index.html.erb
+++ b/app/views/cursos/_admin_index.html.erb
@@ -1,30 +1,44 @@
-
-<table>
+<%- model_class = Curso -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Código &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Duração &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Tipo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:codigo) %></th>
+      <th><%= model_class.human_attribute_name(:duracao) %></th>
+      <th><%= model_class.human_attribute_name(:tipo) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @cursos.each do |curso| %>
       <tr>
+        <td><%= link_to curso.id, curso_path(curso) %></td>
         <td><%= curso.nome %></td>
         <td><%= curso.codigo %></td>
         <td><%= curso.duracao %></td>
         <td><%= curso.tipo %></td>
-        <td><%= link_to 'Mostrar |', curso %></td>
-        <td><%= link_to 'Editar |', edit_curso_path(curso) %></td>
-        <td><%= link_to 'Apagar', curso, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
+        <td><%=l curso.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_curso_path(curso), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      curso_path(curso),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+          <%= link_to 'Mostrar', curso, :class => 'btn btn-default btn-xs'%>
+        </td>
       </tr>
     <% end %>
+    <%= paginate @cursos %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'Novo Curso', new_curso_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_curso_path,
+            :class => 'btn btn-primary' %>
