--- a/app/views/cursos/_form.html.erb
+++ b/app/views/cursos/_form.html.erb
@@ -1,33 +1,55 @@
-<%= form_for(@curso) do |f| %>
-  <% if @curso.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@curso.errors.count, "error") %> prohibited this curso from being saved:</h2>
+<%= form_for @curso, :html => { :class => "form-horizontal curso" } do |f| %>
 
-      <ul>
-      <% @curso.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @curso.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@curso.errors.count, "error") %> prohibited this curso from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @curso.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nome, "Nome" %><br>
-    <%= f.text_field :nome %>
+  <div class="form-group">
+    <%= f.label :nome, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :nome, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:nome) %>
   </div>
-  <div class="field">
-    <%= f.label :codigo, "Código" %><br>
-    <%= f.text_field :codigo %>
+  <div class="form-group">
+    <%= f.label :codigo, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :codigo, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:codigo) %>
   </div>
-  <div class="field">
-    <%= f.label :duracao, "Duração" %><br>
-    <%= f.text_field :duracao %>
+  <div class="form-group">
+    <%= f.label :duracao, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :duracao, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:duracao) %>
   </div>
-  <div class="field">
-    <%= f.label :tipo, "Tipo" %><br>
-    <%= f.text_field :tipo %>
+  <div class="form-group">
+    <%= f.label :tipo, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :tipo, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:tipo) %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                cursos_path, :class => 'btn btn-default' %>
+    </div>
   </div>
+
 <% end %>
