--- a/app/views/cursos/_users_index.html.erb
+++ b/app/views/cursos/_users_index.html.erb
@@ -1,25 +1,30 @@
-
-<table>
+<%- model_class = Curso -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Código &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Duração &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Tipo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:codigo) %></th>
+      <th><%= model_class.human_attribute_name(:duracao) %></th>
+      <th><%= model_class.human_attribute_name(:tipo) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @cursos.each do |curso| %>
       <tr>
+        <td><%= link_to curso.id, curso_path(curso) %></td>
         <td><%= curso.nome %></td>
         <td><%= curso.codigo %></td>
         <td><%= curso.duracao %></td>
         <td><%= curso.tipo %></td>
+        <td><%=l curso.created_at %></td>
+      
       </tr>
     <% end %>
+    <%= paginate @cursos %>
   </tbody>
 </table>
-
-<br>
