--- a/app/views/cursos/edit.html.erb
+++ b/app/views/cursos/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editar Curso</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Mostrar', @curso %> |
-<%= link_to 'Voltar', cursos_path %>
+<%- model_class = Curso -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
