--- a/app/views/cursos/show.html.erb
+++ b/app/views/cursos/show.html.erb
@@ -1,24 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Curso -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @curso.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @curso.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:codigo) %>:</strong></dt>
+  <dd><%= @curso.codigo %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:duracao) %>:</strong></dt>
+  <dd><%= @curso.duracao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:tipo) %>:</strong></dt>
+  <dd><%= @curso.tipo %></dd>
+</dl>
 
-<p>
-  <strong>Codigo:</strong>
-  <%= @curso.codigo %>
-</p>
-
-<p>
-  <strong>Duraçao:</strong>
-  <%= @curso.duracao %>
-</p>
-
-<p>
-  <strong>Tipo:</strong>
-  <%= @curso.tipo %>
-</p>
-
-<%= link_to 'Editar', edit_curso_path(@curso) %> |
-<%= link_to 'Voltar', cursos_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              cursos_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_curso_path(@curso), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              curso_path(@curso),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
