--- a/app/views/disciplinas/_form.html.erb
+++ b/app/views/disciplinas/_form.html.erb
@@ -1,45 +1,69 @@
-<%= form_for(@disciplina) do |f| %>
-  <% if @disciplina.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@disciplina.errors.count, "error") %> prohibited this disciplina from being saved:</h2>
+<%= form_for @disciplina, :html => { :class => "form-horizontal disciplina" } do |f| %>
 
-      <ul>
-      <% @disciplina.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @disciplina.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@disciplina.errors.count, "error") %> prohibited this disciplina from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @disciplina.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nome, "Nome" %><br>
-    <%= f.text_field :nome %>
+  <div class="form-group">
+    <%= f.label :nome, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :nome, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:nome) %>
   </div>
-  <div class="field">
-    <%= f.label :codigo, "Código" %><br>
-    <%= f.text_field :codigo %>
+  <div class="form-group">
+    <%= f.label :codigo, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :codigo, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:codigo) %>
   </div>
-  <div class="field">
-    <%= f.label :curso_id, "Curso" %><br>
-    <%= f.collection_select :curso_id, Curso.all, :id, :nome %>
+  <div class="form-group">
+    <%= f.label :curso_id, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :curso_id, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:curso_id) %>
   </div>
-  <div class="field">
-    <%= f.label :funcao_id, "Cargo" %><br>
-    <%= f.collection_select :funcao_id, Funcao.all, :id, :cargo %>
+  <div class="form-group">
+    <%= f.label :funcao_id, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :funcao_id, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:funcao_id) %>
   </div>
-  <div class="field">
-    <%= f.label :funcionario_id, "Funcionário" %><br>
-    <%= f.collection_select :funcionario_id, Funcionario.all, :id, :nome %>
+  <div class="form-group">
+    <%= f.label :funcionario_id, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :funcionario_id, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:funcionario_id) %>
   </div>
-  <div class="field">
-    <%= f.label :aluno_id, "Aluno" %><br>
-    <%= f.collection_select :aluno_id, Aluno.all, :id, :nome, prompt: "Selecione" %>
+  <div class="form-group">
+    <%= f.label :aluno_id, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :aluno_id, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:aluno_id) %>
   </div>
-  <div class="field">
-    <%= f.label :aluno_id, "Aluno" %><br>
-    <%= f.collection_select :aluno_id, Aluno.all, :id, :nome, prompt: "Selecione" %>
+
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                disciplinas_path, :class => 'btn btn-default' %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
 <% end %>
