--- a/app/views/disciplinas/_users_index.html.erb
+++ b/app/views/disciplinas/_users_index.html.erb
@@ -1,27 +1,35 @@
-
-<table>
+<%- model_class = Disciplina -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Código &nbsp;&nbsp;</th>
-      <th>Curso &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Funcionário &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Função &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:codigo) %></th>
+      <th><%= model_class.human_attribute_name(:curso_id) %></th>
+      <th><%= model_class.human_attribute_name(:funcao_id) %></th>
+      <th><%= model_class.human_attribute_name(:funcionario_id) %></th>
+      <th><%= model_class.human_attribute_name(:aluno_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @disciplinas.each do |disciplina| %>
       <tr>
+        <td><%= link_to disciplina.id, disciplina_path(disciplina) %></td>
         <td><%= disciplina.nome %></td>
         <td><%= disciplina.codigo %></td>
         <td><%= disciplina.curso.nome %></td>
-        <td><%= disciplina.funcionario.nome %></td>
         <td><%= disciplina.funcao.cargo %></td>
+        <td><%= disciplina.funcionario.nome %></td>
+        <td><%= disciplina.aluno_id %></td>
+        <td><%=l disciplina.created_at %></td>
+        
       </tr>
     <% end %>
+    <%= paginate @disciplinas %>
   </tbody>
 </table>
-
-<br>
+.nome
