--- a/app/views/disciplinas/edit.html.erb
+++ b/app/views/disciplinas/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editar Disciplina</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Mostrar', @disciplina %> |
-<%= link_to 'Voltar', disciplinas_path %>
+<%- model_class = Disciplina -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
