--- a/app/views/disciplinas/show.html.erb
+++ b/app/views/disciplinas/show.html.erb
@@ -1,36 +1,29 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Disciplina -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @disciplina.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @disciplina.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:codigo) %>:</strong></dt>
+  <dd><%= @disciplina.codigo %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:curso_id) %>:</strong></dt>
+  <dd><%= @disciplina.curso_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:funcao_id) %>:</strong></dt>
+  <dd><%= @disciplina.funcao_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:funcionario_id) %>:</strong></dt>
+  <dd><%= @disciplina.funcionario_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:aluno_id) %>:</strong></dt>
+  <dd><%= @disciplina.aluno_id %></dd>
+</dl>
 
-<p>
-  <strong>Código:</strong>
-  <%= @disciplina.codigo %>
-</p>
-
-<p>
-  <strong>Curso:</strong>
-  <%= @disciplina.curso.nome %>
-</p>
-
-<p>
-  <strong>Funcionário:</strong>
-  <%= @disciplina.funcionario.nome %>
-</p>
-
-<p>
-  <strong>Cargo:</strong>
-  <%= @disciplina.funcao.cargo %>
-</p>
-<p>
-  <strong>Alunos:</strong>
-  <% @disciplina.alunos.each do |aluno| %>
-  <li><%= "Matricula: #{aluno.matricula} - Nome: #{aluno.nome}" %></li>
-  <% end %>
-</p>
-
-
-<%= link_to 'Editar', edit_disciplina_path(@disciplina) %> |
-<%= link_to 'Voltar', disciplinas_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              disciplinas_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_disciplina_path(@disciplina), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              disciplina_path(@disciplina),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
