--- a/app/views/funcaos/_form.html.erb
+++ b/app/views/funcaos/_form.html.erb
@@ -1,21 +1,34 @@
-<%= form_for(@funcao) do |f| %>
-  <% if @funcao.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@funcao.errors.count, "error") %> prohibited this funcao from being saved:</h2>
+<%= form_for @funcao, :html => { :class => "form-horizontal funcao" } do |f| %>
 
-      <ul>
-      <% @funcao.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @funcao.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@funcao.errors.count, "error") %> prohibited this funcao from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @funcao.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :cargo %><br>
-    <%= f.text_field :cargo %>
+  <div class="form-group">
+    <%= f.label :cargo, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :cargo, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:cargo) %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                funcaos_path, :class => 'btn btn-default' %>
+    </div>
   </div>
+
 <% end %>
