--- a/app/views/funcaos/_users_index.html.erb
+++ b/app/views/funcaos/_users_index.html.erb
@@ -1,19 +1,24 @@
-
-<table>
+<%- model_class = Funcao -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Cargo</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:cargo) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @funcaos.each do |funcao| %>
       <tr>
+        <td><%= link_to funcao.id, funcao_path(funcao) %></td>
         <td><%= funcao.cargo %></td>
+        <td><%=l funcao.created_at %></td>
+        
       </tr>
     <% end %>
+    <%= paginate @funcaos %>
   </tbody>
 </table>
-
-<br>
