--- a/app/views/funcaos/edit.html.erb
+++ b/app/views/funcaos/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editar Função</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Listar', @funcao %> |
-<%= link_to 'Voltar', funcaos_path %>
+<%- model_class = Funcao -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
