--- a/app/views/funcionarios/_users_index.erb
+++ b/app/views/funcionarios/_users_index.erb
@@ -1,40 +1,42 @@
-
-<table>
+<%- model_class = Funcionario -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Matricula &nbsp;&nbsp;</th>
-      <th>Nascimento &nbsp;</th>
-      <th>Endereço &nbsp;&nbsp;</th>
-      <th>Admissão &nbsp;&nbsp;</th>
-      <th>Usuário &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Função &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Sexo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>CPF &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>RG &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Status &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:matricula) %></th>
+      <th><%= model_class.human_attribute_name(:nascimento) %></th>
+      <th><%= model_class.human_attribute_name(:endereco) %></th>
+      <th><%= model_class.human_attribute_name(:admissao) %></th>
+      <th><%= model_class.human_attribute_name(:status) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%= model_class.human_attribute_name(:funcao_id) %></th>
+      <th><%= model_class.human_attribute_name(:sexo) %></th>
+      <th><%= model_class.human_attribute_name(:cpf) %></th>
+      <th><%= model_class.human_attribute_name(:rg) %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @funcionarios.each do |funcionario| %>
       <tr>
+        <td><%= link_to funcionario.id, funcionario_path(funcionario) %></td>
         <td><%= funcionario.nome %></td>
         <td><%= funcionario.matricula %></td>
         <td><%= funcionario.nascimento %></td>
         <td><%= funcionario.endereco %></td>
         <td><%= funcionario.admissao %></td>
+        <td><%= funcionario.status %></td>
         <td><%= funcionario.user.email %></td>
         <td><%= funcionario.funcao.cargo %></td>
         <td><%= funcionario.sexo %></td>
         <td><%= funcionario.cpf %></td>
         <td><%= funcionario.rg %></td>
-        <td><%= funcionario.status %></td>
+        
       </tr>
     <% end %>
     <%= paginate @funcionarios %>
   </tbody>
 </table>
-
-<br>
