--- a/app/views/funcionarios/show.html.erb
+++ b/app/views/funcionarios/show.html.erb
@@ -1,55 +1,39 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Funcionario -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @funcionario.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @funcionario.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:matricula) %>:</strong></dt>
+  <dd><%= @funcionario.matricula %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:nascimento) %>:</strong></dt>
+  <dd><%= @funcionario.nascimento %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:endereco) %>:</strong></dt>
+  <dd><%= @funcionario.endereco %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:admissao) %>:</strong></dt>
+  <dd><%= @funcionario.admissao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
+  <dd><%= @funcionario.status %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= @funcionario.user.email %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:funcao_id) %>:</strong></dt>
+  <dd><%= @funcionario.funcao.cargo %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:sexo) %>:</strong></dt>
+  <dd><%= @funcionario.sexo %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:cpf) %>:</strong></dt>
+  <dd><%= @funcionario.cpf %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:rg) %>:</strong></dt>
+  <dd><%= @funcionario.rg %></dd>
+</dl>
 
-<p>
-  <strong>Matricula:</strong>
-  <%= @funcionario.matricula %>
-</p>
-
-<p>
-  <strong>Nascimento:</strong>
-  <%= @funcionario.nascimento %>
-</p>
-
-<p>
-  <strong>Endereço:</strong>
-  <%= @funcionario.endereco %>
-</p>
-
-<p>
-  <strong>Admissão:</strong>
-  <%= @funcionario.admissao %>
-</p>
-
-<p>
-  <strong>Usuário:</strong>
-  <%= @funcionario.user.email %>
-</p>
-
-<p>
-  <strong>Função:</strong>
-  <%= @funcionario.funcao.cargo %>
-</p>
-<p>
-  <strong>Sexo:</strong>
-  <%= @funcionario.sexo %>
-</p>
-<p>
-  <strong>CPF:</strong>
-  <%= @funcionario.cpf %>
-</p>
-<p>
-  <strong>RG:</strong>
-  <%= @funcionario.rg %>
-</p>
-<p>
-  <strong>Status:</strong>
-  <%= @funcionario.status %>
-</p>
-
-<%= link_to 'Editar', edit_funcionario_path(@funcionario) %> |
-<%= link_to 'Voltar', funcionarios_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              funcionarios_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_funcionario_path(@funcionario), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              funcionario_path(@funcionario),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
