--- a/app/views/turmas/_admin_index.erb
+++ b/app/views/turmas/_admin_index.erb
@@ -1,34 +1,48 @@
-
-<table>
+<%- model_class = Turma -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Código</th>
-      <th>Turno</th>
-      <th>Semestre</th>
-      <th>Capacidade</th>
-      <th>Funcionário</th>
-      <th>Disciplina</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:codigo) %></th>
+      <th><%= model_class.human_attribute_name(:turno) %></th>
+      <th><%= model_class.human_attribute_name(:semestre) %></th>
+      <th><%= model_class.human_attribute_name(:capacidade) %></th>
+      <th><%= model_class.human_attribute_name(:funcionario_id) %></th>
+      <th><%= model_class.human_attribute_name(:disciplina_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @turmas.each do |turma| %>
       <tr>
+        <td><%= link_to turma.id, turma_path(turma) %></td>
         <td><%= turma.codigo %></td>
         <td><%= turma.turno %></td>
         <td><%= turma.semestre %></td>
         <td><%= turma.capacidade %></td>
         <td><%= turma.funcionario.nome %></td>
-        <td><%= turma.disciplina.nome %></td>
-        <td><%= link_to 'Mostrar |', turma %></td>
-        <td><%= link_to 'Editar |', edit_turma_path(turma) %></td>
-        <td><%= link_to 'Apagar', turma, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
+        <td><%= turma.disciplina.codigo %></td>
+        <td><%=l turma.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_turma_path(turma), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      turma_path(turma),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+          <%= link_to 'Mostrar', turma, :class => 'btn btn-default btn-xs'%>
+        </td>
       </tr>
     <% end %>
+    <%= paginate @turmas %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'Nova Turma', new_turma_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_turma_path,
+            :class => 'btn btn-primary' %>
