--- a/app/views/turmas/new.html.erb
+++ b/app/views/turmas/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Nova Turma</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Voltar', turmas_path %>
+<%- model_class = Turma -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
