--- a/app/views/turmas/show.html.erb
+++ b/app/views/turmas/show.html.erb
@@ -1,40 +1,35 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Turma -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Código:</strong>
-  <%= @turma.codigo %>
-</p>
-
-<p>
-  <strong>Turno:</strong>
-  <%= @turma.turno %>
-</p>
-
-<p>
-  <strong>Semestre:</strong>
-  <%= @turma.semestre %>
-</p>
-
-<p>
-  <strong>Capacidade:</strong>
-  <%= @turma.capacidade %>
-</p>
-
-<p>
-  <strong>Funcionário:</strong>
-  <%= @turma.funcionario.nome %>
-</p>
-
-<p>
-  <strong>Disciplina:</strong>
-  <%= @turma.disciplina.nome %>
-</p>
-<p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:codigo) %>:</strong></dt>
+  <dd><%= @turma.codigo %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:turno) %>:</strong></dt>
+  <dd><%= @turma.turno %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:semestre) %>:</strong></dt>
+  <dd><%= @turma.semestre %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:capacidade) %>:</strong></dt>
+  <dd><%= @turma.capacidade %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:funcionario_id) %>:</strong></dt>
+  <dd><%= @turma.funcionario.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:disciplina_id) %>:</strong></dt>
+  <dd><%= @turma.disciplina.nome %></dd>
+  <p>
   <strong>Alunos:</strong>
   <% @turma.alunos.each do |aluno| %>
   <li><%= "Matricula: #{aluno.matricula} - Nome: #{aluno.nome}" %></li>
   <% end %>
 </p>
+</dl>
 
-<%= link_to 'Editar', edit_turma_path(@turma) %> |
-<%= link_to 'Voltar', turmas_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              turmas_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_turma_path(@turma), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              turma_path(@turma),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
