--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,2 @@
-<td><%= link_to user.id, new_user_session_path %></td>
+<td><%= link_to user.id, @user %></td>
 <td><%= link_to user.email, current_user.email %></td>
-
