--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <div class="container">
   <div class="row">
@@ -6,6 +5,13 @@
     <h3>Usuários</h3>
     <div class="column">
       <table class="table">
+      <thead>
+    <tr>
+      <th>Identificador &nbsp;&nbsp;</th>
+      <th>Usuário &nbsp;&nbsp;&nbsp;</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
         <tbody>
           <% @users.each do |user| %>
             <tr>
@@ -19,4 +25,4 @@
   </div>
 </div>
 <br>
-<%= link_to 'Voltar', index_path %>
+<%= link_to 'Voltar', root_path %>
